[gd_scene load_steps=17 format=2]

[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Direct_movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot-xr-tools/assets/PlayerBody.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Climb_movement.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/misc/VR_Common_Shader_Cache.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Pickup.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Jump_movement.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/vrScenes/code/player.gd" type="Script" id=8]
[ext_resource path="res://characters/common/hitBoxes.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/godot-xr-tools/assets/LeftHand.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/godot-xr-tools/assets/RightHand.tscn" type="PackedScene" id=11]

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.1, 0.15, 0.2 )

[sub_resource type="SphereShape" id=5]
radius = 2.5

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("FPController/player/damage erea/hitBoxes/healthManager/healthDisplay/healthDisplayView")

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 9 )

[sub_resource type="CapsuleShape" id=6]
radius = 0.5
height = 1.2

[node name="VrControllerMain" type="Spatial"]

[node name="FPController" parent="." instance=ExtResource( 1 )]

[node name="vr_common_shader_cache" parent="FPController/ARVRCamera" index="0" instance=ExtResource( 5 )]

[node name="LeftHandController" parent="FPController" index="2"]
visible = true

[node name="LeftHand" parent="FPController/LeftHandController" index="0" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, 0, 0.09 )

[node name="Function_Direct_movement" parent="FPController/LeftHandController" index="1" instance=ExtResource( 2 )]
smooth_rotation = true
move_type = 1
canFly = false

[node name="Function_Pickup" parent="FPController/LeftHandController" index="2" instance=ExtResource( 6 )]

[node name="healthbar location" type="RemoteTransform" parent="FPController/LeftHandController" index="3"]
transform = Transform( 1.91069e-16, -4.37114e-09, 0.1, -0.1, -4.37114e-09, 0, 4.37114e-09, -0.1, -4.37114e-09, 0.0129065, 0, 0.0938475 )
remote_path = NodePath("../../player/damage erea/hitBoxes/healthManager/healthDisplay")

[node name="RightHandController" parent="FPController" index="3"]
visible = true

[node name="RightHand" parent="FPController/RightHandController" index="0" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02, 0, 0.09 )

[node name="Function_Pickup" parent="FPController/RightHandController" index="1" instance=ExtResource( 6 )]

[node name="Function_Jump_movement" parent="FPController/RightHandController" index="2" instance=ExtResource( 7 )]
jump_button_id = 7

[node name="PlayerBody" parent="FPController" instance=ExtResource( 3 )]

[node name="Function_Climb_movement" parent="FPController" instance=ExtResource( 4 )]
left_pickup = NodePath("../LeftHandController/Function_Pickup")
right_pickup = NodePath("../RightHandController/Function_Pickup")

[node name="player" type="Spatial" parent="FPController"]
script = ExtResource( 8 )

[node name="aboveHead" type="Spatial" parent="FPController/player"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2.5, 0 )
visible = false

[node name="pouch r" type="MeshInstance" parent="FPController/player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.808, 0.1 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="pouch l" type="MeshInstance" parent="FPController/player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.808, 0.1 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../pouch r")
material/0 = null

[node name="pouch f r" type="MeshInstance" parent="FPController/player"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.15, 1.2, 0 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../pouch r")
material/0 = null

[node name="pouch f l" type="MeshInstance" parent="FPController/player"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.15, 1.2, 0 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../pouch r")
material/0 = null

[node name="pouch b r" type="MeshInstance" parent="FPController/player"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.15, 1.3, 0.3 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../pouch r")
material/0 = null

[node name="pouch b l" type="MeshInstance" parent="FPController/player"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.15, 1.3, 0.3 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../pouch r")
material/0 = null

[node name="healing area" type="Spatial" parent="FPController/player"]

[node name="Area" type="Area" parent="FPController/player/healing area"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="FPController/player/healing area/Area"]
shape = SubResource( 5 )

[node name="damage erea" type="Spatial" parent="FPController/player"]

[node name="hitBoxes" parent="FPController/player/damage erea" instance=ExtResource( 9 )]
belongsTo = 1

[node name="healthManager" parent="FPController/player/damage erea/hitBoxes" index="1"]
transform = Transform( 3.18448e-16, -7.28523e-09, 0.166667, -0.166667, -7.28523e-09, 0, 7.28523e-09, -0.166667, -7.28523e-09, -0.811822, -0.333333, -0.676921 )

[node name="healthDisplay" parent="FPController/player/damage erea/hitBoxes/healthManager" index="0"]
transform = Transform( 0.999998, 1.03029e-13, -4.65868e-21, -1.03029e-13, 0.999998, 1.03029e-13, 1.05879e-21, -1.03029e-13, 0.999998, 1.90735e-06, -1.43051e-06, -2.86102e-06 )
material/0 = SubResource( 8 )

[node name="mesh" type="Spatial" parent="FPController/player"]

[node name="collectionArea" type="Spatial" parent="FPController/player"]

[node name="Area" type="Area" parent="FPController/player/collectionArea"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="FPController/player/collectionArea/Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 6 )

[node name="playerAIcenter" type="Spatial" parent="FPController/player" groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09337, 0 )

[connection signal="body_entered" from="FPController/player/collectionArea/Area" to="FPController/player" method="_on_Area_body_entered"]

[editable path="FPController"]
[editable path="FPController/player/damage erea/hitBoxes"]
[editable path="FPController/player/damage erea/hitBoxes/healthManager"]
[editable path="FPController/player/damage erea/hitBoxes/healthManager/healthDisplay"]
[editable path="FPController/player/damage erea/hitBoxes/healthManager/healthDisplay/healthDisplayView/healthBar"]
